<resources>
    <string name="app_name">SendMeal</string>

    <!-- Página registro -->

    <string name="titulo_pantalla_registrar_usuario">Completá tus datos</string>
    <string name="registrar_usuario_nombre">Nombre</string>
    <string name="registrar_usuario_email">E-mail</string>
    <string name="registrar_usuario_clave">Clave</string>
    <string name="registrar_usuario_repetir_clave">Repetir Clave</string>
    <string name="registrar_usuario_tarjeta_credito">Tarjeta de crédito</string>
    <string name="registrar_usuario_tipo_cuenta">Tipo de cuenta</string>
    <string name="registrar_usuario_tipo_cuenta_1">Base</string>
    <string name="registrar_usuario_tipo_cuenta_2">Premium</string>
    <string name="registrar_usuario_tipo_cuenta_3">Full</string>
    <string name="registrar_usuario_credito_inicial">Crédito inicial</string>
    <string name="registrar_usuario_notificar_correo">Recibir notificaciones al E-mail</string>
    <string name="toggleButton_recibir_notificaciones_correo_of">No</string>
    <string name="toggleButton_recibir_notificaciones_correo_on">Si</string>
    <string name="es_vendedor">¿Sos vendedor?</string>
    <string name="alias_cbu">Alias CBU</string>
    <string name="CBU">CBU</string>
    <string name="aceptar_condiciones">Aceptá los terminos y condiciones</string>
    <string name="contrasenia_hint">Usá entre 6 y 20 caracteres</string>
    <string name="repetir_contrasenia_hint">Vuelve a escribir la clave</string>
    <string name="numero_tarjeta_credito_hint">Número</string>
    <string name="fecha_venc_tarjeta_credito_hint">MM/AA</string>
    <string name="ccv_tarjeta_credito_hint">CCV</string>

    <string name="boton_registrarme">Registrarme</string>
    <string name="title_activity_home">Settings</string>

    <!-- toolbar -->

    <string name="action_registrarme">Registrarme</string>
    <string name="action_crear_item">Crear Item</string>
    <string name="action_ver_lista_items">Lista Items</string>

    <string name="action_buscar_item">Buscar</string>

    <!-- nuevo item -->
    <string name="titulo_pantalla_nuevo_item">Crear nueva comida</string>
    <string name="id_nuevo_item">ID</string>
    <string name="titulo_nuevo_item">Nombre del ítem</string>
    <string name="descripcion_nuevo_item">Descripción</string>
    <string name="precio_nuevo_item">Precio</string>
    <string name="calorias_nuevo_item">Calorías</string>
    <string name="boton_crear_nuevo_item">Guardar</string>

    <!-- nuevo pedido -->
    <string name="titulo_pantalla_nuevo_pedido">Crear nuevo pedido</string>
    <string name="boton_seleccionar_ubicacion">Seleccionar ubicación</string>
    <string name="boton_seleccionar_platos">Seleccionar platos</string>
    <string name="boton_crear_pedido">Crear pedido</string>
    <string name="boton_enviar_pedido">Enviar pedido</string>
    <string name="title_activity_maps">Map</string>
</resources>
