<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:text="@string/titulo_pantalla_registrar_usuario"
                android:textSize="@dimen/titulo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/registrar_usuario_nombre"
                android:textSize="@dimen/text_view_ingreso_valores"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="@dimen/edit_text_ingreso_valores"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/registrar_usuario_email"
                android:textSize="@dimen/text_view_ingreso_valores"
                app:layout_constraintStart_toStartOf="@+id/editTextNombre"
                app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="nombre@ejemplo.com"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/edit_text_ingreso_valores"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/registrar_usuario_clave"
                android:textSize="@dimen/text_view_ingreso_valores"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextClave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/contrasenia_hint"
                    android:inputType="textPassword"
                    android:textSize="@dimen/edit_text_ingreso_valores" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewRepetirClave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/registrar_usuario_repetir_clave"
                android:textSize="@dimen/text_view_ingreso_valores"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewRepetirClave"
                app:layout_constraintTop_toBottomOf="@+id/textViewRepetirClave"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextRepetirClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repetir_contrasenia_hint"
                    android:inputType="textPassword"
                    android:textSize="@dimen/edit_text_ingreso_valores" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewTarjetaCredito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/registrar_usuario_tarjeta_credito"
                android:textSize="@dimen/text_view_ingreso_valores"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:hint="@string/numero_tarjeta_credito_hint"
                android:textSize="@dimen/edit_text_ingreso_valores"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/editText2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="@+id/textViewTarjetaCredito"
                app:layout_constraintTop_toBottomOf="@+id/textViewTarjetaCredito" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/fecha_venc_tarjeta_credito_hint"
                android:textSize="@dimen/edit_text_ingreso_valores"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/editText3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/editText"
                app:layout_constraintTop_toTopOf="@+id/editText" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ccv_tarjeta_credito_hint"
                android:textSize="@dimen/edit_text_ingreso_valores"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="@+id/editText2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/registrar_usuario_tipo_cuenta"
                android:textSize="@dimen/text_view_ingreso_valores"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/registrar_usuario_tipo_cuenta_1" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registrar_usuario_tipo_cuenta_2" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/registrar_usuario_tipo_cuenta_3" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/registrar_usuario_credito_inicial"
                android:textSize="@dimen/text_view_ingreso_valores"
                app:layout_constraintStart_toStartOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textSize="@dimen/text_view_ingreso_valores"
                android:text="@string/registrar_usuario_notificar_correo"
                app:layout_constraintStart_toStartOf="@+id/seekBar2"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:textOff="@string/toggleButton_recibir_notificaciones_correo_of"
                android:textOn="@string/toggleButton_recibir_notificaciones_correo_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/es_vendedor"
                android:textSize="@dimen/text_view_ingreso_valores"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/aceptar_condiciones"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/boton_registrarme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>