<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoPedido.NuevoPedido">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:text="@string/titulo_pantalla_nuevo_pedido"
        android:textSize="@dimen/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSeleccionarUbicacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/boton_seleccionar_ubicacion"
        android:textSize="@dimen/text_view_ingreso_valores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Button
        android:id="@+id/buttonSeleccionarPlatos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_seleccionar_platos"
        android:textSize="@dimen/text_view_ingreso_valores"
        app:layout_constraintEnd_toEndOf="@+id/buttonSeleccionarUbicacion"
        app:layout_constraintStart_toStartOf="@+id/buttonSeleccionarUbicacion"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeleccionarUbicacion" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/buttonSeleccionarPlatos"
        app:layout_constraintStart_toStartOf="@+id/buttonSeleccionarPlatos"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeleccionarPlatos">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0">

            <TableLayout
                android:id="@+id/idTablaResumenPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TableRow android:background="#128675">

                    <TextView
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:padding="6dip"
                        android:text="Plato"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="6dip"
                        android:text="Cantidad"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:padding="6dip"
                        android:text="Subtotal"
                        android:textColor="@android:color/white" />
                </TableRow>

            </TableLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonCrearPedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/boton_crear_pedido"
        android:textSize="@dimen/text_view_ingreso_valores"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnviarPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCrearPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="Total"
                    android:textColor="#128675" />

                <TextView
                    android:id="@+id/idTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dip"

                    android:text="$48,4" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonEnviarPedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/boton_enviar_pedido"
        android:textSize="@dimen/text_view_ingreso_valores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonCrearPedido"
        app:layout_constraintStart_toStartOf="@+id/buttonCrearPedido" />


</androidx.constraintlayout.widget.ConstraintLayout>